# quebec-covid19-telegram-bot

./: cava-v1.py  pyproject.toml
